--- a/index.html
+++ b/index.html
@@ -5,46 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe Game</title>
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-        body {
-            background-color: #1B2430;
-            color:white;
-            height: 130vh;
-        }
-        .judul {
-            align-items: center;
-        }
-        .tictactoe{
-            width: 600px;
-            height: 600px;
-            margin: 2rem auto;
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            /* display: flex;
-            flex-wrap: wrap; */
-        }
-        .tictactoe > div {
-            width: 200px;
-            height: 200px;
-            border: 1px solid white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 4rem;
-        }
-        .tictactoe > div:hover {
-            cursor: pointer;
-            background-color: #242f3f;
-        }
-        .line {
-            background-color:#242f3f;
-            width: 200px;
-            height: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <center>
